<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.friend.FriendActivity">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.anshim.presentation.friend.FriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/Widget.ToolbarTitle.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_all"
                style="@style/Widget.Navigation.Button.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/suit_sb"
                android:onClick="@{() -> viewModel.deleteAllFriends()}"
                android:text="@string/delete_all"
                android:textColor="@color/blue_500"
                android:textSize="@dimen/typographyBase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_100"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacingBase" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacingBase" />

        <EditText
            android:id="@+id/name"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing28"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:onTextChanged="@{viewModel::onNameTextChanged}"
            android:text="@{viewModel.friendName}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/email"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:onTextChanged="@{viewModel::onEmailTextChanged}"
            android:text="@{viewModel.friendEmail}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.RoundButton.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing28"
            android:enabled="@{viewModel.friendName.length() > 0 &amp;&amp; viewModel.validEmail == true}"
            android:onClick="@{() -> viewModel.saveFriend()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friend_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing28"
            android:clipToPadding="false"
            android:paddingBottom="48dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/save"
            tools:listitem="@layout/item_friend" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>